drkns 11.10.2017 22:04:47 +0100 - build 5064

1. В 5049 погнулось повышение привилегий при создании папки.

zg 08.10.2017 14:45:39 +0300 - build 5063

1. 0003514: Возможность задать приоритет макросов, определяемым через MCTL_ADDMACRO.

drkns 06.10.2017 18:12:24 +0100 - build 5062

1. И ещё.

drkns 04.10.2017 23:47:28 +0100 - build 5061

1. И ещё.

drkns 02.10.2017 16:09:16 +0100 - build 5060

1. И ещё.

drkns 02.10.2017 15:59:05 +0100 - build 5059

1. И ещё одно уточнение 5049.

drkns 02.10.2017 00:34:01 +0100 - build 5058

1. Уточнение 5057 (на самом деле нет, багу 4+ года).

drkns 01.10.2017 22:59:43 +0100 - build 5057

1. Рефакторинг.

drkns 01.10.2017 10:02:27 +0100 - build 5056

1. Ещё одно уточнение 5049.

zg 01.10.2017 03:15:57 +0300 - build 5055

1. уточнение 5050.1: Запускаем плагин VisRen и нажимаем много раз Down, происходит какое-то мерцание интерфейса.

drkns 30.09.2017 23:23:55 +0100 - build 5054

1. С форума: Search stops after folder (symlink) excluded in filter.

2. Уточнение поиска в альтернативных потоках.

zg 01.10.2017 00:05:03 +0300 - build 5053

1. ошибочная посылка DN_CONTROLINPUT с Param1=-1 на любое передвижение мыши, если в первый раз вернули TRUE.

zg 30.09.2017 23:33:20 +0300 - build 5052

1. уточнение 5050.1: lua: Keys"F7 Tab" Dlg.SetFocus(3) win.Sleep(200) Keys"Esc"
   Диалог появляется на экране, а вроде не должен.

drkns 30.09.2017 14:00:05 +0100 - build 5051

1. Рефакторинг.

2. Уточнение 5049 - криво работали маски с [] и выравнивание расширений.

zg 30.09.2017 15:01:48 +0300 - build 5050

1. частично исправлена прямая отрисовка диалога на экран.

2. немодальный диалог показывается сразу.

drkns 29.09.2017 23:31:12 +0100 - build 5049

1. Начинаем разделять большой и страшный farwinapi на отдельные модули.

2. Рефакторинг.

3. С форума - падение на пустой истории.

zg 29.09.2017 11:35:02 +0300 - build 5048

1. для немодальных диалогов приходят события DN_GOTFOCUS/DN_KILLFOCUS с param1=-1, когда окно получает/теряет фокус.
