@@ -1,3 +1,7 @@
+zg 15.10.2017 16:22:28 +0300 - build 5065
+
+1. уточнение 5050.1: macro Align Block Special is broken.
+
 drkns 11.10.2017 22:04:47 +0100 - build 5064
 
 1. В 5049 погнулось повышение привилегий при создании папки.
